# seatxray

./: .gitignore  CONTRIBUTING.md  README.ja.md  README.md  build_windows.ps1  main.py  mkdocs.yml  package_msix.ps1  pyproject.toml  sign_msix.bat
docs/: _redirects  index.md
docs/en/: disclaimer.md  index.md  privacy.md  setup.md
docs/ja/: disclaimer.md  index.md  privacy.md  setup.md
docs/overrides/partials/: copyright.html
overrides/partials/: copyright.html
scripts/: generate_assets.py
src/: main.py  state.py  theme.py
src/assets/: LICENSE  airports.json
src/assets/dummy_data/: flight_offers.json  seatmap.json  seatmap_wide.json
src/assets/locales/: en.json  ja.json
src/assets/locales/en/: airports.json
src/assets/locales/ja/: airports.json
src/components/: about_dialog.py  airport_picker.py  flight_card.py  seat_canvas.py  window_header.py
src/services/: amadeus_client.py  seat_service.py  sync_service.py
src/utils/: i18n.py  secure_storage.py
src/views/: app_layout.py  search_view.py  seatmap_content.py  seatmap_view.py  settings_view.py
tests/: test_encryption.py  verify_demo_flow.py
tools/: generate_airports.py
