[project]
name = "seatxray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "cryptography>=46.0.3",
    "flet==0.80.0",
    "httpx>=0.28.1",
]

[tool.flet]
app.product = "SeatXray"
app.org = "com.seatxray"
app.path = "src"

[tool.flet.windows]
executable_name = "SeatXray"
publisher_display_name = "SeatXray"
identity_name = "SeatXray.SeatXray"
publisher = "CN=33D8BA06-78D8-4319-B5F0-45A7789CD09B"
