[project]
name = "seatxray"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "cryptography>=46.0.3",
    "flet==0.80.1",
    "httpx>=0.28.1",
    "pillow>=12.1.0",
    "toml>=0.10.2",
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Microsoft :: Windows",
]

[tool.flet]
app.product = "SeatXray"
app.org = "com.seatxray"
app.path = "src"

[tool.flet.windows]
executable_name = "SeatXray"
publisher_display_name = "SeatXray"
identity_name = "SeatXray.SeatXray"
publisher = "CN=33D8BA06-78D8-4319-B5F0-45A7789CD09B"

[tool.flet.android]
package_name = "com.seatxray.app"
adaptive_icon_foreground = "assets/icon.png"
adaptive_icon_background = "#16191d"

[tool.flet.android.permission]
"android.permission.INTERNET" = true

[tool.flet.android.meta_data]
"android:extractNativeLibs" = "true"
